kubernetes/compliance/gatekeeper/constraints/disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: pulseguard-disallow-latest
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
