kubernetes/compliance/gatekeeper/constraints/required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: pulseguard-required-resources
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
